fix some styles and border collapse issues (#10)

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -10,29 +10,35 @@
    other classes.
  */
 @layer base {
-  .btn {
-    @apply rounded-md border border-transparent py-2 px-4 text-sm font-medium shadow-sm;
+  .ctw-btn {
+    @apply ctw-rounded-md ctw-border ctw-border-transparent ctw-py-2 ctw-px-4 ctw-text-sm ctw-font-medium ctw-shadow-sm;
   }
 
-  .btn-default {
-    @apply btn border-divider-main bg-white text-content-light hover:bg-bg-lighter;
+  .ctw-table-base {
+    text-indent: 0;
+    border-color: inherit;
+    border-collapse: collapse;
   }
 
-  .btn-primary {
-    @apply btn bg-primary-main text-white hover:bg-primary-dark;
+  .ctw-btn-default {
+    @apply ctw-btn ctw-border-divider-main ctw-bg-white ctw-text-content-light hover:ctw-bg-bg-lighter;
   }
 
-  .btn-group button {
-    @apply rounded-none;
+  .ctw-btn-primary {
+    @apply ctw-btn ctw-bg-primary-main ctw-text-white hover:ctw-bg-primary-dark;
+  }
+
+  .ctw-btn-group button {
+    @apply ctw-rounded-none;
     margin-left: -1px; /* Counteract button borders. */
   }
 
-  .btn-group button:first-child {
+  .ctw-btn-group button:first-child {
     margin-left: 0;
-    @apply rounded-l-md;
+    @apply ctw-rounded-l-md;
   }
 
-  .btn-group button:last-child {
-    @apply rounded-r-md;
+  .ctw-btn-group button:last-child {
+    @apply ctw-rounded-r-md;
   }
 }
